--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^5.5.0
   flutter:
     sdk: flutter
   flutter_credit_card: ^4.0.1
+  flutter_stripe: ^10.2.0
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
 
